--- a/responses.html
+++ b/responses.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <title>Responses</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="nav-container">
+        <a
+          href="./index.html"
+          class="nav-link animate_animated animate__fadeInDown"
+        >
+          <!-- enter image icon here or nav icon text -->
+          HOME
+        </a>
+        <a
+          href="./responses.html"
+          class="animate_animated animate__fadeInDown nav-link"
+        >
+          <!-- enter image icon here or nav icon text -->
+          RESPONSE
+        </a>
+      </nav>
+    </header>
+    <main class="main">Main</main>
+    <footer class="footer">
+      <h4>Coding Bootcamp 2022</h4>
+      <div class="contact-container">
+        <a class="contact-link" href="">visit my Github</a>
+        <a class="contact-link" href="">Email Me</a>
+      </div>
+    </footer>
+    <script src="./assets/js/index.js"></script>
+  </body>
 </html>
