HTML and CSS complete for question banner

--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
           <button class="btn" id="start-btn">Start</button>
         </div>
       </section>
+      <!-- question section -->
+      <section
+        class="content-section question-section"
+        id="question"
+        data-question-index="i"
+      >
+        <h2 class="content-section-title">
+          question x: something will go here
+        </h2>
+        <ul class="feedback-list">
+          <li class="list-item" data-value="answer1">answer 1</li>
+          <li class="list-item" data-value="answer2">answer 2</li>
+          <li class="list-item" data-value="answer3">answer 3</li>
+          <li class="list-item" data-value="answer4">answer 4</li>
+        </ul>
+        <div class="btn-control">
+          <button class="btn" id="next-btn">Next</button>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <h4>Coding Bootcamp 2022</h4>
