dynamically render question when start is clicked

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
     </header>
 
-    <main class="main">
+    <main class="main" id="main">
       <!-- banner section -->
       <section class="content-section" id="banner">
         <h1 class="content-section-title">WELCOME TO THE HARDEST QUIX</h1>
@@ -41,7 +41,7 @@
         </div>
       </section>
       <!-- question section -->
-      <section
+      <!-- <section
         class="content-section question-section"
         id="question"
         data-question-index="i"
@@ -57,7 +57,7 @@
         </ul>
         <div class="btn-control">
           <button class="btn" id="next-btn">Next</button>
-        </div>
+        </div> -->
       </section>
     </main>
     <footer class="footer">
