--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main class="main" id="main">
       <!-- banner section -->
       <section class="content-section" id="banner">
-        <h1 class="content-section-title">WELCOME TO THE HARDEST QUIX</h1>
+        <h1 class="content-section-title">WELCOME TO THE HARDEST QUIZ</h1>
         <h2 class="content-section-info">ENTER AT YOUR OWN RISK</h2>
         <div class="btn-control">
           <button class="btn" id="start-btn">Start</button>
