css for all webpage fixed and logo add to home nav

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <nav class="nav-container">
         <a
           href="./index.html"
-          class="nav-link animate_animated animate__fadeInDown"
+          class="nav-link-logo animate__animated animate__fadeInDown"
         >
           <!-- enter image icon here or nav icon text -->
-          HOME
+         <img class="logo-img" src="./assets/images/premier-league-logo.png" alt="premier league logo">
         </a>
         <a
           href="./responses.html"
-          class="animate_animated animate__fadeInDown nav-link"
+          class="animate__animated animate__fadeInDown nav-link"
         >
           <!-- enter image icon here or nav icon text -->
           RESPONSE
@@ -33,10 +33,10 @@
 
     <main class="main" id="main">
       <!-- banner section -->
-      <section class="content-section" id="banner">
-        <h1 class="content-section-title">WELCOME TO THE HARDEST QUIZ</h1>
-        <h2 class="content-section-info">ENTER AT YOUR OWN RISK</h2>
-        <div class="btn-control">
+      <section class="content-section animate__animated animate__bounceInDown" id="banner">
+        <h1 class="content-section-title animate__animated animate__bounceInDown">WELCOME TO THE HARDEST PREMIER LEAGUE QUIZ</h1>
+        <h2 class="content-section-info animate__animated animate__bounceInDown">ENTER AT YOUR OWN RISK</h2>
+        <div class="btn-control animate__animated animate__bounceInDown">
           <button class="btn" id="start-btn">Start</button>
         </div>
       </section>
@@ -63,7 +63,7 @@
     <footer class="footer">
       <h4>Coding Bootcamp 2022</h4>
       <div class="contact-container">
-        <a class="contact-link" href="">visit my Github</a>
+        <a class="contact-link" href="">Github</a>
         <a class="contact-link" href="">Email Me</a>
       </div>
     </footer>
