psuedo code for results table complete

--- a/index.html
+++ b/index.html
@@ -58,6 +58,50 @@
         <div class="btn-control">
           <button class="btn" id="next-btn">Next</button>
         </div> -->
+
+  <!--  results section -->
+
+        <section class="content-section results-section">
+          <h2 class="content-section-title">
+            results
+          </h2>
+       <table class="table">
+         <tr>
+           <td>question </td>
+           <td>answer</td>
+         </tr>
+         <tr>
+          <td>question1 </td>
+          <td>answer1</td>
+        </tr>
+        <tr>
+         <td>question2 </td>
+         <td>answer2</td>
+       </tr>
+       <tr>
+        <td>question3 </td>
+        <td>answer3</td>
+      </tr>
+      <tr>
+       <td>question4 </td>
+       <td>answer4</td>
+     </tr>
+     <tr>
+      <td>question 5</td>
+      <td>answer5</td>
+    </tr>
+    <tr>
+     <td>question 6</td>
+     <td>answer6</td>
+   </tr>
+   <tr>
+    <td>question 7</td>
+    <td>answer7</td>
+  </tr>
+         
+       </table>
+          
+        </section>
       </section>
     </main>
     <footer class="footer">
