css and script done that shows responses

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
           class="nav-link-logo animate__animated animate__fadeInDown"
         >
           <!-- enter image icon here or nav icon text -->
-         <img class="logo-img" src="./assets/images/premier-league-logo.png" alt="premier league logo">
+          <img
+            class="logo-img"
+            src="./assets/images/premier-league-logo.png"
+            alt="premier league logo"
+          />
         </a>
         <a
           href="./responses.html"
@@ -33,9 +37,20 @@
 
     <main class="main" id="main">
       <!-- banner section -->
-      <section class="content-section animate__animated animate__bounceInDown" id="banner">
-        <h1 class="content-section-title animate__animated animate__bounceInDown">WELCOME TO THE HARDEST PREMIER LEAGUE QUIZ</h1>
-        <h2 class="content-section-info animate__animated animate__bounceInDown">ENTER AT YOUR OWN RISK</h2>
+      <section
+        class="content-section animate__animated animate__bounceInDown"
+        id="banner"
+      >
+        <h1
+          class="content-section-title animate__animated animate__bounceInDown"
+        >
+          WELCOME TO THE HARDEST PREMIER LEAGUE QUIZ
+        </h1>
+        <h2
+          class="content-section-info animate__animated animate__bounceInDown"
+        >
+          ENTER AT YOUR OWN RISK
+        </h2>
         <div class="btn-control animate__animated animate__bounceInDown">
           <button class="btn" id="start-btn">Start</button>
         </div>
@@ -59,50 +74,34 @@
           <button class="btn" id="next-btn">Next</button>
         </div> -->
 
-  <!--  results section -->
+      <!-- results section 
 
-        <section class="content-section results-section">
-          <h2 class="content-section-title">
-            results
-          </h2>
-       <table class="table">
-         <tr>
-           <td>question </td>
-           <td>answer</td>
-         </tr>
-         <tr>
-          <td>question1 </td>
-          <td>answer1</td>
-        </tr>
-        <tr>
-         <td>question2 </td>
-         <td>answer2</td>
-       </tr>
-       <tr>
-        <td>question3 </td>
-        <td>answer3</td>
-      </tr>
-      <tr>
-       <td>question4 </td>
-       <td>answer4</td>
-     </tr>
-     <tr>
-      <td>question 5</td>
-      <td>answer5</td>
-    </tr>
-    <tr>
-     <td>question 6</td>
-     <td>answer6</td>
-   </tr>
-   <tr>
-    <td>question 7</td>
-    <td>answer7</td>
-  </tr>
-         
-       </table>
-          
-        </section>
+      <section class="content-section">
+        <h2 class="content-section-title">results</h2>
+        <div class="results-section">
+          <ul class="results-list">
+            <li class="results-item">1</li>
+            <li class="results-item">2</li>
+            <li class="results-item">3</li>
+            <li class="results-item">4</li>
+            <li class="results-item">5</li>
+            <li class="results-item">5</li>
+            <li class="results-item">6</li>
+            <li class="results-item">6</li>
+          </ul>
+          <ul class="results-list">
+            <li class="results-item">1</li>
+            <li class="results-item">2</li>
+            <li class="results-item">3</li>
+            <li class="results-item">4</li>
+            <li class="results-item">5</li>
+            <li class="results-item">5</li>
+            <li class="results-item">6</li>
+            <li class="results-item">6</li>
+          </ul>
+        </div>
       </section>
+      -->
     </main>
     <footer class="footer">
       <h4>Coding Bootcamp 2022</h4>
