psuedo code & css for form section complete

--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@
         </div>
       </section>
       -->
+      <!-- form section -->
+      <section class="feedback-section content-section">
+        <h2 class="content-section-title">Submit your feedback</h2>
+        <form>
+          <div class="form-control">
+            <input
+              type="text"
+              class="form-input"
+              placeholder="enter full name"
+            />
+          </div>
+          <div class="form-control">
+            <button class="btn" type="submit">Submit</button>
+          </div>
+        </form>
+      </section>
     </main>
     <footer class="footer">
       <h4>Coding Bootcamp 2022</h4>
