rendered form in javascript

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </section>
       -->
       <!-- form section -->
-      <section class="feedback-section content-section">
+      <!-- <section class="feedback-section content-section">
         <h2 class="content-section-title">Submit your feedback</h2>
         <form>
           <div class="form-control">
@@ -117,7 +117,7 @@
             <button class="btn" type="submit">Submit</button>
           </div>
         </form>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
       <h4>Coding Bootcamp 2022</h4>
