render restart banner and remove results added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a
           href="./index.html"
           class="nav-link-logo animate__animated animate__fadeInDown"
+          id="home"
         >
           <!-- enter image icon here or nav icon text -->
           <img
