rendered banner in javascript

--- a/index.html
+++ b/index.html
@@ -36,90 +36,7 @@
       </nav>
     </header>
 
-    <main class="main" id="main">
-      <!-- banner section -->
-      <section
-        class="content-section animate__animated animate__bounceInDown"
-        id="banner"
-      >
-        <h1
-          class="content-section-title animate__animated animate__bounceInDown"
-        >
-          WELCOME TO THE HARDEST PREMIER LEAGUE QUIZ
-        </h1>
-        <h2
-          class="content-section-info animate__animated animate__bounceInDown"
-        >
-          ENTER AT YOUR OWN RISK
-        </h2>
-        <div class="btn-control animate__animated animate__bounceInDown">
-          <button class="btn" id="start-btn">Start</button>
-        </div>
-      </section>
-      <!-- question section -->
-      <!-- <section
-        class="content-section question-section"
-        id="question"
-        data-question-index="i"
-      >
-        <h2 class="content-section-title">
-          question x: something will go here
-        </h2>
-        <ul class="feedback-list">
-          <li class="list-item" data-value="answer1">answer 1</li>
-          <li class="list-item" data-value="answer2">answer 2</li>
-          <li class="list-item" data-value="answer3">answer 3</li>
-          <li class="list-item" data-value="answer4">answer 4</li>
-        </ul>
-        <div class="btn-control">
-          <button class="btn" id="next-btn">Next</button>
-        </div> -->
-
-      <!-- results section 
-
-      <section class="content-section">
-        <h2 class="content-section-title">results</h2>
-        <div class="results-section">
-          <ul class="results-list">
-            <li class="results-item">1</li>
-            <li class="results-item">2</li>
-            <li class="results-item">3</li>
-            <li class="results-item">4</li>
-            <li class="results-item">5</li>
-            <li class="results-item">5</li>
-            <li class="results-item">6</li>
-            <li class="results-item">6</li>
-          </ul>
-          <ul class="results-list">
-            <li class="results-item">1</li>
-            <li class="results-item">2</li>
-            <li class="results-item">3</li>
-            <li class="results-item">4</li>
-            <li class="results-item">5</li>
-            <li class="results-item">5</li>
-            <li class="results-item">6</li>
-            <li class="results-item">6</li>
-          </ul>
-        </div>
-      </section>
-      -->
-      <!-- form section -->
-      <!-- <section class="feedback-section content-section">
-        <h2 class="content-section-title">Submit your feedback</h2>
-        <form>
-          <div class="form-control">
-            <input
-              type="text"
-              class="form-input"
-              placeholder="enter full name"
-            />
-          </div>
-          <div class="form-control">
-            <button class="btn" type="submit">Submit</button>
-          </div>
-        </form>
-      </section> -->
-    </main>
+    <main class="main" id="main"></main>
     <footer class="footer">
       <h4>Coding Bootcamp 2022</h4>
       <div class="contact-container">
