--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
+    <!-- linked stylesheets for the icons used for the coding languages -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+    <!-- linked stylesheets for animation -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -31,17 +37,47 @@
           class="animate__animated animate__fadeInDown nav-link"
         >
           <!-- enter image icon here or nav icon text -->
-          RESPONSE
+          HIGH SCORE
         </a>
       </nav>
     </header>
 
-    <main class="main" id="main"></main>
+    <main class="main" id="main">
+      <!-- timer section -->
+      <!-- <section class="timer-section">
+        <div id="timer">
+          Time Remaining:
+          <span id="time-span" class="time-span-class"></span>seconds
+        </div>
+      </section> -->
+    </main>
     <footer class="footer">
       <h4>Coding Bootcamp 2022</h4>
       <div class="contact-container">
-        <a class="contact-link" href="">Github</a>
-        <a class="contact-link" href="">Email Me</a>
+        <!-- form icon 1 -->
+        <div class="footer-icon">
+          <a
+            class="footer-link"
+            href="https://www.linkedin.com/in/abdilatif-warsame-130837225/"
+          >
+            <i class="devicon-linkedin-plain"></i>
+          </a>
+        </div>
+        <!-- footer icon 2 -->
+        <div class="footer-icon">
+          <a class="footer-link" href="https://twitter.com/AbdilatifW">
+            <i class="devicon-twitter-original"></i>
+          </a>
+        </div>
+        <!-- footer icon 3 -->
+        <div class="footer-icon">
+          <a class="footer-link" href="https://github.com/awarsame1996">
+            <i class="devicon-github-original"></i>
+          </a>
+        </div>
+        <div>
+          <p class="footer-name">© Abdilatif Warsame</p>
+        </div>
       </div>
     </footer>
     <script src="./assets/js/index.js"></script>
