changes to results banner and README

--- a/index.html
+++ b/index.html
@@ -42,15 +42,7 @@
       </nav>
     </header>
 
-    <main class="main" id="main">
-      <!-- timer section -->
-      <!-- <section class="timer-section">
-        <div id="timer">
-          Time Remaining:
-          <span id="time-span" class="time-span-class"></span>seconds
-        </div>
-      </section> -->
-    </main>
+    <main class="main" id="main"></main>
     <footer class="footer">
       <h4>Coding Bootcamp 2022</h4>
       <div class="contact-container">
@@ -59,19 +51,28 @@
           <a
             class="footer-link"
             href="https://www.linkedin.com/in/abdilatif-warsame-130837225/"
+            target="_blank"
           >
             <i class="devicon-linkedin-plain"></i>
           </a>
         </div>
         <!-- footer icon 2 -->
         <div class="footer-icon">
-          <a class="footer-link" href="https://twitter.com/AbdilatifW">
+          <a
+            class="footer-link"
+            href="https://twitter.com/AbdilatifW"
+            target="_blank"
+          >
             <i class="devicon-twitter-original"></i>
           </a>
         </div>
         <!-- footer icon 3 -->
         <div class="footer-icon">
-          <a class="footer-link" href="https://github.com/awarsame1996">
+          <a
+            class="footer-link"
+            href="https://github.com/awarsame1996"
+            target="_blank"
+          >
             <i class="devicon-github-original"></i>
           </a>
         </div>
